结构性设计模式 -组合模式 -装饰器模式 -外观模式 -享元模式 -代理模式 行为型设计模式 -责任链模式

--- a/Design_Pattern/Structural_Patterns/CMakeLists.txt
+++ b/Design_Pattern/Structural_Patterns/CMakeLists.txt
@@ -4,4 +4,9 @@ include_directories(.)
 add_subdirectory(Adapter_Pattern)
 add_subdirectory(Bridge_Pattern)
 add_subdirectory(Filter_Pattern)
+add_subdirectory(Composite_Pattern)
+add_subdirectory(Decorator_Pattern)
+add_subdirectory(Facade_Pattern)
+add_subdirectory(FlyWeight_Pattern)
+add_subdirectory(Proxy_Pattern)
 
