行为型设计模式 -命令模式 -解释器模式

--- a/Design_Pattern/Behavioral_Patterns/CMakeLists.txt
+++ b/Design_Pattern/Behavioral_Patterns/CMakeLists.txt
@@ -2,3 +2,5 @@ include_directories(.)
 
 
 add_subdirectory(Chain_Of_Responsibility)
+add_subdirectory(Command_Pattern)
+add_subdirectory(Interpreter_Pattern)
