行为型设计模式： -中介者模式 -备忘录模式 -观察者模式 -状态模式 -空对象模式

--- a/Design_Pattern/Behavioral_Patterns/CMakeLists.txt
+++ b/Design_Pattern/Behavioral_Patterns/CMakeLists.txt
@@ -4,3 +4,9 @@ include_directories(.)
 add_subdirectory(Chain_Of_Responsibility)
 add_subdirectory(Command_Pattern)
 add_subdirectory(Interpreter_Pattern)
+add_subdirectory(Iterator_Pattern)
+add_subdirectory(Mediator_Pattern)
+add_subdirectory(Memento_Pattern)
+add_subdirectory(Observer_Pattern)
+add_subdirectory(State_Pattern)
+add_subdirectory(Null_Object_Pattern)
