行为型设计模式： -策略模式 -模版模式 -访问者模式

--- a/Design_Pattern/Behavioral_Patterns/CMakeLists.txt
+++ b/Design_Pattern/Behavioral_Patterns/CMakeLists.txt
@@ -10,3 +10,6 @@ add_subdirectory(Memento_Pattern)
 add_subdirectory(Observer_Pattern)
 add_subdirectory(State_Pattern)
 add_subdirectory(Null_Object_Pattern)
+add_subdirectory(Strategy_Pattern)
+add_subdirectory(Template_Pattern)
+add_subdirectory(Visitor_Pattern)
